--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:columnCount="2"
     android:rowCount="4"
-    android:useDefaultMargins="true">
+    android:useDefaultMargins="true"
+    tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/amountEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_column="0"
         android:layout_row="0"
+        android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
-        android:maxLength="6"
-        android:digits="0123456789"/>
+        android:digits="0123456789"
+        android:maxLength="6" />
 
     <TextView
         android:id="@+id/amountTextView"
@@ -30,24 +29,24 @@
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
         android:background="@color/amount_backgroud"
+        android:elevation="@dimen/elevation"
         android:hint="@string/enter_amount"
         android:padding="@dimen/textView_padding"
-        android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:elevation="@dimen/elevation"
-        />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <TextView
         android:id="@+id/percentTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="right|center_vertical"
+        android:gravity="right"
+        android:hint="@string/tip_percent"
         android:text="@string/tip_percent" />
 
     <SeekBar
         android:id="@+id/percentSeekBar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/seekbar_height"
         android:layout_gravity="fill_horizontal"
         android:max="30"
         android:progress="15" />
@@ -57,26 +56,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:hint="@string/tip"
         android:text="@string/tip" />
 
     <TextView
         android:id="@+id/tipTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_gravity="fill_horizontal"
+        android:background="@drawable/result_background"
+        android:elevation="@dimen/elevation"
+        android:gravity="center"
+        android:padding="@dimen/textView_padding"
+        android:text="@string/tip" />
 
     <TextView
         android:id="@+id/totalLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:hint="@string/total"
         android:text="@string/total" />
 
     <TextView
         android:id="@+id/totalTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_gravity="fill_horizontal"
+        android:background="@drawable/result_background"
+        android:elevation="@dimen/elevation"
+        android:gravity="center"
+        android:padding="@dimen/textView_padding"
+        android:text="@string/total" />
 
 
 </GridLayout>
