--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:hint="@string/total"
-        android:text="@string/total" />
+        android:text="@string/total"
+        />
 
     <TextView
         android:id="@+id/totalTextView"
